Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

 o #16309 Added server timestamp (ISO, UTC, nano precision) to ConnectReturnQos:
          <clientProperty name='__rcvTimestampStr'>2007-07-09 10:36:38.189000005Z</clientProperty>

 o #16307 Extended C# client library for java like System.currentTimeMillis handling with C# DateTime

 o #16292 ClientProperties of ConnectQos can now be copied to remoteProperties, see
          See: http://www.xmlblaster.org/xmlBlaster/doc/requirements/interface.connect.html#remoteProperty

 o #16264 SocketUrl: changed the Exception to be a communication for cases where the host is temporarly 
          unavailable. If you have a positive SessionId it will go in polling (as opposed to before where 
          it went to dead)

 o #16283 Replication:
          Added property 'dbWriter.quoteColumnNames=false', set to true for DB2 host sinks (e.g. "COMMENT")

 o #16280 Replication:
          Bugfix in SqlRow.java to prevent double base64 encoded client properties for renamed columns
 
 o #16273 Added events for queue thresholds (subject- callback and history queues)

 o #16263 Contrib: changed I_Info.putObject implementations when passing null they now
          remove the entry as specified in javadoc

 o #16256 Replication:
           writer now uses and passes a cloned row (SqlInfo does not change). 
           Invocation of I_PrePostStatement even for CREATE, ALTER and DROP.
           Added Attributes for descriptions created by metadata.

 o #16249 C client library, WINDOWS only: Bugfix: Added WSASetLastError(0)

 o #16243 Replication:
          Added configurable XSL transformation on DbWriter side, e.g. 'dbWriter.xslTransformerName=mydbtrans.xsl'
          Added readOnly flag when using SpecificReadonly
 
 o #16241 Replication: Added Oracle -> DB2 replication support

 o #16235 Replication: fixed msg counting when sending multiple transactions in one message
 