@@ -133,7 +133,6 @@ static bool initConnection(XmlBlasterConnectionUnparsed *xb, XmlBlasterException
    struct hostent hostbuf, *hostP = 0;
    struct servent *portP = 0;
 
-   char *tmphstbuf=0;
    size_t hstbuflen=0;
 
    char serverHostName[256];
@@ -256,35 +255,42 @@ static bool initConnection(XmlBlasterConnectionUnparsed *xb, XmlBlasterException
 
    void freeaddrinfo(*res);
 # endif
-   memset((char *)&hostbuf, 0, sizeof(struct hostent));
-   hostP = gethostbyname_re(serverHostName, &hostbuf, &tmphstbuf, &hstbuflen, errP);
-   if (hostP == 0) {
-      if (*errP != 0) {
-         strncpy0(exception->errorCode, "user.configuration", XMLBLASTEREXCEPTION_ERRORCODE_LEN);
-         SNPRINTF(exception->message, XMLBLASTEREXCEPTION_MESSAGE_LEN,
-            "[%.100s:%d] Connecting to xmlBlaster failed, can't determine hostname (hostP=0), -dispatch/connection/plugin/socket/hostname %s -dispatch/connection/plugin/socket/port %.10s: %s",
-                  __FILE__, __LINE__, serverHostName, servTcpPort, errP);
-         xb->log(xb->logUserP, xb->logLevel, XMLBLASTER_LOG_WARN, __FILE__, exception->message);
-         *errP = 0;
-      }
-      else {
-         strncpy0(exception->errorCode, "user.configuration", XMLBLASTEREXCEPTION_ERRORCODE_LEN);
-         SNPRINTF(exception->message, XMLBLASTEREXCEPTION_MESSAGE_LEN,
-                  "[%.100s:%d] Connecting to xmlBlaster failed, can't determine hostname (hostP=0), -dispatch/connection/plugin/socket/hostname %s -dispatch/connection/plugin/socket/port %.10s, errno=%d",
-                  __FILE__, __LINE__, serverHostName, servTcpPort, errno);
-         xb->log(xb->logUserP, xb->logLevel, XMLBLASTER_LOG_WARN, __FILE__, exception->message);
-      }
-      return false;
-   }
+	if (isalpha(serverHostName[0]) || !strchr(serverHostName,':') ) { /* look for dns name or ipv6 */
+	   char *tmphstbuf=0;
+	   memset((char *)&hostbuf, 0, sizeof(struct hostent));
+	   hostP = gethostbyname_re(serverHostName, &hostbuf, &tmphstbuf, &hstbuflen, errP);
+	   if (hostP == 0) {
+	      if (*errP != 0) {
+	         strncpy0(exception->errorCode, "user.configuration", XMLBLASTEREXCEPTION_ERRORCODE_LEN);
+	         SNPRINTF(exception->message, XMLBLASTEREXCEPTION_MESSAGE_LEN,
+	            "[%.100s:%d] Connecting to xmlBlaster failed, can't determine hostname (hostP=0), -dispatch/connection/plugin/socket/hostname %s -dispatch/connection/plugin/socket/port %.10s: %s",
+	                  __FILE__, __LINE__, serverHostName, servTcpPort, errP);
+	         xb->log(xb->logUserP, xb->logLevel, XMLBLASTER_LOG_WARN, __FILE__, exception->message);
+	         *errP = 0;
+	      }
+	      else {
+	         strncpy0(exception->errorCode, "user.configuration", XMLBLASTEREXCEPTION_ERRORCODE_LEN);
+	         SNPRINTF(exception->message, XMLBLASTEREXCEPTION_MESSAGE_LEN,
+	                  "[%.100s:%d] Connecting to xmlBlaster failed, can't determine hostname (hostP=0), -dispatch/connection/plugin/socket/hostname %s -dispatch/connection/plugin/socket/port %.10s, errno=%d",
+	                  __FILE__, __LINE__, serverHostName, servTcpPort, errno);
+	         xb->log(xb->logUserP, xb->logLevel, XMLBLASTER_LOG_WARN, __FILE__, exception->message);
+	      }
+	      return false;
+	   }
+	   xmlBlasterAddr.sin_addr.s_addr = ((struct in_addr *)(hostP->h_addr))->s_addr; /* inet_addr("192.168.1.2"); */
+	   free(tmphstbuf);
+	}
+	else {
+		/* use ip4 addr directly to avoid dns lookup */
+	   xmlBlasterAddr.sin_addr.s_addr = inet_addr(serverHostName);
+	}
 
    portP = getservbyname(servTcpPort, "tcp");
-   xmlBlasterAddr.sin_addr.s_addr = ((struct in_addr *)(hostP->h_addr))->s_addr; /* inet_addr("192.168.1.2"); */
-   free(tmphstbuf);
    if (portP != 0)
-      xmlBlasterAddr.sin_port = (u_short)portP->s_port;
-   else {
+		xmlBlasterAddr.sin_port = (u_short)portP->s_port;
+   else
       xmlBlasterAddr.sin_port = htons((u_short)atoi(servTcpPort));
-   }
+
    xb->socketToXmlBlaster = (int)socket(AF_INET, SOCK_STREAM, 0);
    if (xb->socketToXmlBlaster != -1) {
       int ret=0;
